# cltree

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.ja.md  README.ko.md  README.md  README.zh-CN.md  SECURITY.md  demo.tape
.githooks/: pre-push
.github/: dependabot.yml
.github/workflows/: ci.yml  labeler.yml  release.yml
docs/: configuration.mdx  contributing.mdx  development.mdx  index.mdx  installation.mdx  license.mdx  meta.json  requirements.mdx  usage.mdx
npm/: README.md
scripts/: claude-debug.sh
src/: app.rs  event.rs  main.rs  terminal.rs  vterm.rs
src/tree/: file_node.rs  mod.rs
src/ui/: file_tree_widget.rs  mod.rs  terminal_widget.rs
tests/: app_startup_test.rs  dependabot_labels_test.rs  file_watcher_test.rs  vterm_test.rs  watch_latency_perf_test.rs  watch_soak_test.rs
