[package]
name = "cltree"
version = "0.4.2"
edition = "2021"
authors = ["jsleemaster"]
description = "A TUI file explorer for Claude Code CLI"
license = "MIT"
repository = "https://github.com/jsleemaster/cltree"
homepage = "https://github.com/jsleemaster/cltree"
keywords = ["cli", "tui", "file-explorer", "claude", "terminal"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# TUI framework
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }

# Async runtime
tokio = { version = "1.42", features = ["full"] }

# File system watching
notify = "8.2"
notify-debouncer-mini = "0.7"

# File tree handling
ignore = "0.4"              # gitignore support

# PTY for terminal embedding
portable-pty = "0.9"

# Utilities
futures = "0.3"
anyhow = "1.0"
dirs = "6.0"
unicode-width = "0.2"
vte = "0.15"

[dev-dependencies]
tempfile = "3.25"

[profile.release]
lto = true
codegen-units = 1
strip = true
